Package_Tools/include-C/ssh/libssh/sftp.pp

(* Const before type ignored *)
function sftp_write(file:Tsftp_file; buf:pointer; count:Tsize_t):Tssize_t;cdecl;external;
{*
 * @brief Seek to a specific location in a file.
 *
 * @param file         Open sftp file handle to seek in.
 *
 * @param new_offset   Offset in bytes to seek.
 *
 * @return             0 on success, < 0 on error.
  }
function sftp_seek(file:Tsftp_file; new_offset:Tuint32_t):longint;cdecl;external;
{*
 * @brief Seek to a specific location in a file. This is the
 * 64bit version.
 *
 * @param file         Open sftp file handle to seek in.
 *
 * @param new_offset   Offset in bytes to seek.
 *
 * @return             0 on success, < 0 on error.
  }
function sftp_seek64(file:Tsftp_file; new_offset:Tuint64_t):longint;cdecl;external;
{*
 * @brief Report current byte position in file.
 *
 * @param file          Open sftp file handle.
 *
 * @return              The offset of the current byte relative to the beginning
 *                      of the file associated with the file descriptor. < 0 on
 *                      error.
  }
function sftp_tell(file:Tsftp_file):dword;cdecl;external;
{*
 * @brief Report current byte position in file.
 *
 * @param file          Open sftp file handle.
 *
 * @return              The offset of the current byte relative to the beginning
 *                      of the file associated with the file descriptor. < 0 on
 *                      error.
  }
function sftp_tell64(file:Tsftp_file):Tuint64_t;cdecl;external;
{*
 * @brief Rewinds the position of the file pointer to the beginning of the
 * file.
 *
 * @param file          Open sftp file handle.
  }
procedure sftp_rewind(file:Tsftp_file);cdecl;external;
{*
 * @brief Unlink (delete) a file.
 *
 * @param sftp          The sftp session handle.
 *
 * @param file          The file to unlink/delete.
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_unlink(sftp:Tsftp_session; file:Pchar):longint;cdecl;external;
{*
 * @brief Remove a directory.
 *
 * @param sftp          The sftp session handle.
 *
 * @param directory     The directory to remove.
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_rmdir(sftp:Tsftp_session; directory:Pchar):longint;cdecl;external;
{*
 * @brief Create a directory.
 *
 * @param sftp          The sftp session handle.
 *
 * @param directory     The directory to create.
 *
 * @param mode          Specifies the permissions to use. It is modified by the
 *                      process's umask in the usual way:
 *                      The permissions of the created file are (mode & ~umask)
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_mkdir(sftp:Tsftp_session; directory:Pchar; mode:Tmode_t):longint;cdecl;external;
{*
 * @brief Rename or move a file or directory.
 *
 * @param sftp          The sftp session handle.
 *
 * @param original      The original url (source url) of file or directory to
 *                      be moved.
 *
 * @param newname       The new url (destination url) of the file or directory
 *                      after the move.
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
(* Const before type ignored *)
function sftp_rename(sftp:Tsftp_session; original:Pchar; newname:Pchar):longint;cdecl;external;
{*
 * @brief Set file attributes on a file, directory or symbolic link.
 *
 * Note, that this function can only set time values using 32 bit values due to
 * the restrictions in the SFTP protocol version 3 implemented by libssh.
 * The support for 64 bit time values was introduced in SFTP version 5, which is
 * not implemented by libssh nor any major SFTP servers.
 *
 * @param sftp          The sftp session handle.
 *
 * @param file          The file which attributes should be changed.
 *
 * @param attr          The file attributes structure with the attributes set
 *                      which should be changed.
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_setstat(sftp:Tsftp_session; file:Pchar; attr:Tsftp_attributes):longint;cdecl;external;
{*
 * @brief Change the file owner and group
 *
 * @param sftp          The sftp session handle.
 *
 * @param file          The file which owner and group should be changed.
 *
 * @param owner         The new owner which should be set.
 *
 * @param group         The new group which should be set.
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_chown(sftp:Tsftp_session; file:Pchar; owner:Tuid_t; group:Tgid_t):longint;cdecl;external;
{*
 * @brief Change permissions of a file
 *
 * @param sftp          The sftp session handle.
 *
 * @param file          The file which owner and group should be changed.
 *
 * @param mode          Specifies the permissions to use. It is modified by the
 *                      process's umask in the usual way:
 *                      The permissions of the created file are (mode & ~umask)
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_chmod(sftp:Tsftp_session; file:Pchar; mode:Tmode_t):longint;cdecl;external;
{*
 * @brief Change the last modification and access time of a file.
 *
 * @param sftp          The sftp session handle.
 *
 * @param file          The file which owner and group should be changed.
 *
 * @param times         A timeval structure which contains the desired access
 *                      and modification time.
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
(* Const before type ignored *)
function sftp_utimes(sftp:Tsftp_session; file:Pchar; times:Ptimeval):longint;cdecl;external;
{*
 * @brief Create a symbolic link.
 *
 * @param  sftp         The sftp session handle.
 *
 * @param  target       Specifies the target of the symlink.
 *
 * @param  dest         Specifies the path name of the symlink to be created.
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
(* Const before type ignored *)
function sftp_symlink(sftp:Tsftp_session; target:Pchar; dest:Pchar):longint;cdecl;external;
{*
 * @brief Read the value of a symbolic link.
 *
 * @param  sftp         The sftp session handle.
 *
 * @param  path         Specifies the path name of the symlink to be read.
 *
 * @return              The target of the link, NULL on error.
 *                      The caller needs to free the memory
 *                      using ssh_string_free_char().
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_readlink(sftp:Tsftp_session; path:Pchar):Pchar;cdecl;external;
{*
 * @brief Get information about a mounted file system.
 *
 * @param  sftp         The sftp session handle.
 *
 * @param  path         The pathname of any file within the mounted file system.
 *
 * @return A statvfs structure or NULL on error.
 *
 * @see sftp_get_error()
  }
(* Const before type ignored *)
function sftp_statvfs(sftp:Tsftp_session; path:Pchar):Tsftp_statvfs_t;cdecl;external;
{*
 * @brief Get information about a mounted file system.
 *
 * @param  file         An opened file.
 *
 * @return A statvfs structure or NULL on error.
 *
 * @see sftp_get_error()
  }
function sftp_fstatvfs(file:Tsftp_file):Tsftp_statvfs_t;cdecl;external;
{*
 * @brief Free the memory of an allocated statvfs.
 *
 * @param  statvfs_o      The statvfs to free.
  }
procedure sftp_statvfs_free(statvfs_o:Tsftp_statvfs_t);cdecl;external;
{*
 * @brief Synchronize a file's in-core state with storage device
 *
 * This calls the "fsync@openssh.com" extension. You should check if the
 * extensions is supported using:
 *
 * @code
 * int supported = sftp_extension_supported(sftp, "fsync@openssh.com", "1");
 * @endcode
 *
 * @param file          The opened sftp file handle to sync
 *
 * @return              0 on success, < 0 on error with ssh and sftp error set.
  }
function sftp_fsync(file:Tsftp_file):longint;cdecl;external;
{*
 * @brief Canonicalize a sftp path.
 *
 * @param sftp          The sftp session handle.
 *
 * @param path          The path to be canonicalized.
 *
 * @return              A pointer to the newly allocated canonicalized path,
 *                      NULL on error. The caller needs to free the memory
 *                      using ssh_string_free_char().
  }
(* Const before type ignored *)
function sftp_canonicalize_path(sftp:Tsftp_session; path:Pchar):Pchar;cdecl;external;
{*
 * @brief Get the version of the SFTP protocol supported by the server
 *
 * @param sftp          The sftp session handle.
 *
 * @return              The server version.
  }
function sftp_server_version(sftp:Tsftp_session):longint;cdecl;external;
{$ifdef WITH_SERVER}
{*
 * @brief Create a new sftp server session.
 *
 * @param session       The ssh session to use.
 *
 * @param chan          The ssh channel to use.
 *
 * @return              A new sftp server session.
  }
function sftp_server_new(session:Tssh_session; chan:Tssh_channel):Tsftp_session;cdecl;external;
{*
 * @brief Initialize the sftp server.
 *
 * @param sftp         The sftp session to init.
 *
 * @return             0 on success, < 0 on error.
  }
function sftp_server_init(sftp:Tsftp_session):longint;cdecl;external;
{*
 * @brief Close and deallocate a sftp server session.
 *
 * @param sftp          The sftp session handle to free.
  }
procedure sftp_server_free(sftp:Tsftp_session);cdecl;external;
{$endif}
{ WITH_SERVER  }
{ sftpserver.c  }
